--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,7 +22,7 @@
       "login": "rohit-ravikoti",
       "name": "Rohit Ravikoti",
       "avatar_url": "https://avatars1.githubusercontent.com/u/16107563?v=4",
-      "profile": "https://novvum.io",
+      "profile": "https://github.com/rajinwonderland",
       "contributions": [
         "content"
       ]
@@ -38,11 +38,11 @@
     },
     {
       "login": "rajinwonderland",
-      "name": "Raj K Singh",
+      "name": "Raj Singh",
       "avatar_url": "https://avatars2.githubusercontent.com/u/15880596?v=4",
-      "profile": "https://www.novvum.io",
+      "profile": "https://github.com/rajinwonderland",
       "contributions": [
-        "content"
+        "code, content"
       ]
     },
     {
