--- a/docs/package.json
+++ b/docs/package.json
@@ -3,13 +3,11 @@
 	"scripts": {
 		"discharge": "discharge deploy",
 		"dev": "charge serve source",
-		"build": "charge build source dist",
-		"deploy": "gh-pages -d dist"
+		"build": "charge build source dist"
 	},
 	"devDependencies": {
 		"@static/charge": "^1.1.0",
-		"@static/discharge": "^2.0.0",
-		"gh-pages": "^2.0.1"
+		"@static/discharge": "^2.0.0"
 	},
 	"dependencies": {
 		"modern-normalize": "^0.5.0",
