--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -2,7 +2,7 @@
 	"name": "docs",
 	"version": "1.0.0",
 	"scripts": {
-		"discharge": "discharge deploy",
+		"deploy": "discharge deploy",
 		"dev": "charge serve source",
 		"build": "charge build source dist"
 	},
